adds yt scrapping script and few sample data files

--- a/Insta_Data_Scrapping_using_Google_search.ipynb
+++ b/Insta_Data_Scrapping_using_Google_search.ipynb
@@ -1,6 +1,6 @@
 {
   "nbformat": 4,
-  "nbformat_minor": 0,
+  "nbformat_minor": 2,
   "metadata": {
     "colab": {
       "name": "Insta Data Scrapping using Google search.ipynb",
@@ -18,158 +18,151 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "QVk9nVfXuRRE"
-      },
       "source": [
         "**Test for Python Developer – API Data Extraction role**\n",
         "\n",
         "1. Uses google search to get insta profile ids"
-      ]
+      ],
+      "metadata": {
+        "id": "QVk9nVfXuRRE"
+      }
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "DWitN5wmuNEg"
-      },
+      "execution_count": null,
       "source": [
-        "\n",
-        "import requests\n",
-        "from bs4 import BeautifulSoup\n",
-        "import os\n",
-        "import time\n",
-        "import re\n",
-        "import pandas as pd  \n",
-        "import urllib\n",
+        "\r\n",
+        "import requests\r\n",
+        "from bs4 import BeautifulSoup\r\n",
+        "import os\r\n",
+        "import time\r\n",
+        "import re\r\n",
+        "import pandas as pd  \r\n",
+        "import urllib\r\n",
         "from PIL import Image"
       ],
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "metadata": {
+        "id": "DWitN5wmuNEg"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "kqTDekfN_we4"
-      },
       "source": [
         "**step 1 :** Get insta user links from google search"
-      ]
+      ],
+      "metadata": {
+        "id": "kqTDekfN_we4"
+      }
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "source": [
+        "PROJECT_DIR = '/content/drive/MyDrive/DataExtraction'\r\n",
+        "DATA_DIR = os.path.join(PROJECT_DIR,'ScrappedData')\r\n",
+        "INSTA_DATA_DIR = os.path.join(DATA_DIR,'InstaDataFromGoogle')"
+      ],
+      "outputs": [],
       "metadata": {
         "id": "MPrxxQmFzUjX"
-      },
-      "source": [
-        "PROJECT_DIR = '/content/drive/MyDrive/DataExtraction'\n",
-        "DATA_DIR = os.path.join(PROJECT_DIR,'ScrappedData')\n",
-        "INSTA_DATA_DIR = os.path.join(DATA_DIR,'InstaData')"
-      ],
-      "execution_count": null,
-      "outputs": []
+      }
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "qMoGqX7Wz52r"
-      },
+      "execution_count": null,
       "source": [
-        "if not os.path.exists(PROJECT_DIR):\n",
-        "  os.mkdir(PROJECT_DIR)\n",
-        "\n",
-        "if not os.path.exists(DATA_DIR):\n",
-        "  os.mkdir(DATA_DIR)\n",
-        "\n",
-        "if not os.path.exists(INSTA_DATA_DIR):\n",
+        "if not os.path.exists(PROJECT_DIR):\r\n",
+        "  os.mkdir(PROJECT_DIR)\r\n",
+        "\r\n",
+        "if not os.path.exists(DATA_DIR):\r\n",
+        "  os.mkdir(DATA_DIR)\r\n",
+        "\r\n",
+        "if not os.path.exists(INSTA_DATA_DIR):\r\n",
         "  os.mkdir(INSTA_DATA_DIR)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "metadata": {
+        "id": "qMoGqX7Wz52r"
+      }
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "1TBje98L2pMK"
-      },
+      "execution_count": null,
       "source": [
         "search_url = 'https://www.google.com/search?q=site%3Ainstagram.com+and+intitle%3A%40'"
       ],
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "metadata": {
+        "id": "1TBje98L2pMK"
+      }
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "source": [
+        "# function to get insta profile urls from bs4 element\r\n",
+        "def get_profile_url(heading_element):\r\n",
+        "  link = heading_element.find_parent('a')\r\n",
+        "  link_href = link.get('href')\r\n",
+        "  profile_link = link_href.split('=')[1]\r\n",
+        "  profile_link = profile_link.split('/&')[0]\r\n",
+        "  return profile_link\r\n"
+      ],
+      "outputs": [],
       "metadata": {
         "id": "IQWpkO5r_COz"
-      },
-      "source": [
-        "# function to get insta profile urls from bs4 element\n",
-        "def get_profile_url(heading_element):\n",
-        "  link = heading_element.find_parent('a')\n",
-        "  link_href = link.get('href')\n",
-        "  profile_link = link_href.split('=')[1]\n",
-        "  profile_link = profile_link.split('/&')[0]\n",
-        "  return profile_link\n"
-      ],
-      "execution_count": null,
-      "outputs": []
+      }
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "drV2bSpRu-tC",
-        "outputId": "c0ce133c-8334-464f-803b-401634adbe86"
-      },
-      "source": [
-        "insta_user_ids = []\n",
-        "insta_user_urls = []\n",
-        "\n",
-        "search_items = 10\n",
-        "#loop over search pages\n",
-        "limit_pages = 100\n",
-        "page_no = 1\n",
-        "\n",
-        " #loop for 100 google search pages\n",
-        "for page in range(limit_pages):\n",
-        "  #get the page\n",
-        "  data = requests.get(search_url)\n",
-        "  print(\"Scrapping data from page : {}\".format(page_no))\n",
-        "  #create bs4 soup object\n",
-        "  soup = BeautifulSoup(data.content, \"html.parser\")\n",
-        "  #extract headings\n",
-        "  headings = soup.find_all( 'h3' )\n",
-        "  #loop over headings of curr page \n",
-        "  for heading in headings:\n",
-        "    if '@' in heading.getText():\n",
-        "      profile_url = get_profile_url(heading)\n",
-        "      insta_id = re.findall('\\(@.*?\\)', heading.getText())\n",
-        "      if len(insta_id) > 0:\n",
-        "        insta_id = insta_id[0].replace('(','').replace(')','')\n",
-        "        insta_user_ids.append(insta_id)\n",
-        "        insta_user_urls.append(profile_url)\n",
-        "  \n",
-        "  #update search url for new page\n",
-        "  search_url = search_url + '&start='+str(search_items)\n",
-        "  search_items = search_items + 10\n",
-        "  page_no = page_no + 1\n",
-        "  print(\"Insta URLS saved : {}\".format(len(insta_user_ids)))\n",
-        "  time.sleep(3.6)\n",
-        "\n",
-        "#save as csv file\n",
-        "\n",
-        "dict = {'insta_id': insta_user_ids, 'profile_urls': insta_user_urls}  \n",
-        "\n",
-        "df = pd.DataFrame(dict) \n",
-        "    \n",
-        "# saving the dataframe \n",
-        "df.to_csv(os.path.join(DATA_DIR,'insta_users_data1.csv')) \n",
-        "\n",
-        "\n"
-      ],
       "execution_count": null,
+      "source": [
+        "insta_user_ids = []\r\n",
+        "insta_user_urls = []\r\n",
+        "\r\n",
+        "search_items = 10\r\n",
+        "#loop over search pages\r\n",
+        "limit_pages = 100\r\n",
+        "page_no = 1\r\n",
+        "\r\n",
+        " #loop for 100 google search pages\r\n",
+        "for page in range(limit_pages):\r\n",
+        "  #get the page\r\n",
+        "  data = requests.get(search_url)\r\n",
+        "  print(\"Scrapping data from page : {}\".format(page_no))\r\n",
+        "  #create bs4 soup object\r\n",
+        "  soup = BeautifulSoup(data.content, \"html.parser\")\r\n",
+        "  #extract headings\r\n",
+        "  headings = soup.find_all( 'h3' )\r\n",
+        "  #loop over headings of curr page \r\n",
+        "  for heading in headings:\r\n",
+        "    if '@' in heading.getText():\r\n",
+        "      profile_url = get_profile_url(heading)\r\n",
+        "      insta_id = re.findall('\\(@.*?\\)', heading.getText())\r\n",
+        "      if len(insta_id) > 0:\r\n",
+        "        insta_id = insta_id[0].replace('(','').replace(')','')\r\n",
+        "        insta_user_ids.append(insta_id)\r\n",
+        "        insta_user_urls.append(profile_url)\r\n",
+        "  \r\n",
+        "  #update search url for new page\r\n",
+        "  search_url = search_url + '&start='+str(search_items)\r\n",
+        "  search_items = search_items + 10\r\n",
+        "  page_no = page_no + 1\r\n",
+        "  print(\"Insta URLS saved : {}\".format(len(insta_user_ids)))\r\n",
+        "  time.sleep(3.6)\r\n",
+        "\r\n",
+        "#save as csv file\r\n",
+        "\r\n",
+        "dict = {'insta_id': insta_user_ids, 'profile_urls': insta_user_urls}  \r\n",
+        "\r\n",
+        "df = pd.DataFrame(dict) \r\n",
+        "    \r\n",
+        "# saving the dataframe \r\n",
+        "df.to_csv(os.path.join(DATA_DIR,'insta_users_data_from_google.csv')) \r\n",
+        "\r\n",
+        "\r\n"
+      ],
       "outputs": [
         {
           "output_type": "stream",
@@ -377,46 +370,43 @@
             "Insta URLS saved : 268\n"
           ]
         }
-      ]
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "drV2bSpRu-tC",
+        "outputId": "c0ce133c-8334-464f-803b-401634adbe86"
+      }
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "source": [],
+      "outputs": [],
       "metadata": {
         "id": "x1mWLvJx4PSf"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "cStsoQCO4P_g"
-      },
       "source": [
         "**Step 2:** use obtained insta profile urls and get all required data using instascrape"
-      ]
+      ],
+      "metadata": {
+        "id": "cStsoQCO4P_g"
+      }
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 202
-        },
-        "id": "b4o_qbFncmUQ",
-        "outputId": "9951d7b4-b877-4d30-d88f-a7189839117f"
-      },
+      "execution_count": null,
       "source": [
-        "#load the csv file\n",
-        "\n",
-        "insta_users_info = pd.read_csv(os.path.join(DATA_DIR,'insta_users_data1.csv'))\n",
-        "\n",
+        "#load the csv file\r\n",
+        "\r\n",
+        "insta_users_info = pd.read_csv(os.path.join(DATA_DIR,'insta_users_data_from_google.csv'))\r\n",
+        "\r\n",
         "insta_users_info.head()"
       ],
-      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -494,28 +484,30 @@
           "metadata": {},
           "execution_count": 7
         }
-      ]
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 202
+        },
+        "id": "b4o_qbFncmUQ",
+        "outputId": "9951d7b4-b877-4d30-d88f-a7189839117f"
+      }
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "a8-TZBQEdmec"
-      },
+      "execution_count": null,
       "source": [
         "insta_ids = insta_users_info['insta_id']"
       ],
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "metadata": {
+        "id": "a8-TZBQEdmec"
+      }
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Bffu0aMC8mkx",
-        "outputId": "18933437-ce82-4d9d-f1a7-63a964358182"
-      },
+      "execution_count": null,
       "source": [
         "# install chromium, its driver, and selenium\n",
         "!apt update\n",
@@ -530,7 +522,6 @@
         "# open it, go to a website, and get results\n",
         "wd = webdriver.Chrome(options=options)"
       ],
-      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -611,35 +602,35 @@
             "Successfully installed selenium-3.141.0\n"
           ]
         }
-      ]
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Bffu0aMC8mkx",
+        "outputId": "18933437-ce82-4d9d-f1a7-63a964358182"
+      }
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "hurOyiUQLITh"
-      },
+      "execution_count": null,
       "source": [
         "headers = {\n",
         "    \"user-agent\": \"Mozilla/5.0 (Linux; Android 6.0; Nexus 5 Build/MRA58N) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/87.0.4280.88 Mobile Safari/537.36 Edg/87.0.664.57\",\n",
         "    \"cookie\": \"sessionid=33726898013%3AiXbdXjOUcT2dHd%3A27;\"\n",
         "}"
       ],
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "metadata": {
+        "id": "hurOyiUQLITh"
+      }
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "LgQBQDHf09wf",
-        "outputId": "5ade86f8-12c7-423d-b2eb-1f76c9e98dbd"
-      },
+      "execution_count": null,
       "source": [
         "!pip install insta-scrape\n"
       ],
-      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -657,24 +648,29 @@
             "Successfully installed insta-scrape-2.1.2\n"
           ]
         }
-      ]
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LgQBQDHf09wf",
+        "outputId": "5ade86f8-12c7-423d-b2eb-1f76c9e98dbd"
+      }
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "8Sq0hCJn07VM"
-      },
+      "execution_count": null,
       "source": [
         "from instascrape import *\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "metadata": {
+        "id": "8Sq0hCJn07VM"
+      }
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "bgqOKN2t3KBT"
-      },
+      "execution_count": null,
       "source": [
         "def get_image(url,name):\n",
         "   urllib.request.urlretrieve(url, name)\n",
@@ -684,14 +680,14 @@
         "\n",
         "\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "metadata": {
+        "id": "bgqOKN2t3KBT"
+      }
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "BO_B5rNEFM2L"
-      },
+      "execution_count": null,
       "source": [
         "def get_twitter_acc(username):\n",
         "  search_query = 'https://www.google.com/search?q=site%3Atwitter.com+and+intitle:'+username\n",
@@ -711,14 +707,14 @@
         "        return twitter_link\n",
         "\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "metadata": {
+        "id": "BO_B5rNEFM2L"
+      }
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "WnCxoGHeJENL"
-      },
+      "execution_count": null,
       "source": [
         "def get_youtube_acc(username):\n",
         "  search_query = 'https://www.google.com/search?q='+username\n",
@@ -734,23 +730,18 @@
         "      youtube_link = parent_el.split('=')[2].split('&')[0]\n",
         "      return youtube_link"
       ],
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "metadata": {
+        "id": "WnCxoGHeJENL"
+      }
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ZUfsPMMjx84B",
-        "outputId": "407eca53-7285-41d5-d933-f22aa5f6ac92"
-      },
+      "execution_count": null,
       "source": [
         "#xls\n",
         "!pip3 install xlsxwriter"
       ],
-      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -763,28 +754,29 @@
             "Successfully installed xlsxwriter-3.0.1\n"
           ]
         }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "lxKQQLSjRIW1"
-      },
-      "source": [
-        "import xlsxwriter"
       ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "i2Qb08l4QncL",
-        "outputId": "fb36d76f-7970-4512-d3e4-add84bc0234b"
-      },
+        "id": "ZUfsPMMjx84B",
+        "outputId": "407eca53-7285-41d5-d933-f22aa5f6ac92"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "source": [
+        "import xlsxwriter"
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "lxKQQLSjRIW1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "source": [
         "for insta_id in insta_ids:\n",
         "  insta_id = insta_id.replace('@','')\n",
@@ -913,7 +905,6 @@
         "\n",
         "\n"
       ],
-      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1203,7 +1194,14 @@
             "Scrapping details from id :oicarodecarvalho\n"
           ]
         }
-      ]
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "i2Qb08l4QncL",
+        "outputId": "fb36d76f-7970-4512-d3e4-add84bc0234b"
+      }
     }
   ]
 }
